# certus-tap

./: .coveragerc  .dockerignore  .env.example  .envrc  .envrc.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TODO.md  docker-compose.full-dev.yml  docker-compose.yml  justfile  package.json  pyproject.toml  settings.py  zensical.toml
.context/: AGENTS.md  CONTEXT.md  README.md  bootstrap.txt  session-charter.md  zellij.kdl
.context/bootstraps/: deep.md  lite.md  security.md  spike.md
.context/tasks/: backlog.md  now.md
.context/workflows/: agent-session.md  review.md
.github/workflows/: deploy-docs.yml  main.yml
certus_ask/: Dockerfile  __init__.py  main.py
certus_ask/core/: __init__.py  async_opensearch_handler.py  config.py  config_validation.py  context.py  exceptions.py  features.py  logging.py  metrics.py  middleware.py  opensearch_indices.py  request_context.py  response_utils.py  telemetry.py
certus_ask/deploy/: docker-compose.yml
certus_ask/middleware/: __init__.py  logging.py
certus_ask/pipelines/: components.py  metadata.py  preprocessing.py  rag.py  sarif.py  spdx.py  web.py  web_scrapy.py
certus_ask/routers/: __init__.py  datalake.py  evaluation.py  health.py  ingestion.py  query.py
certus_ask/schemas/: datalake.py  errors.py  evaluation.py  ingestion.py  metadata.py  query.py  responses.py  unified_security_scan.py
certus_ask/services/: __init__.py  datalake.py  evaluation.py  github.py  opensearch.py  presidio.py  privacy_logger.py  s3.py  trust.py  webscraper.py
certus_ask/tests/: conftest.py
certus_assurance/: Dockerfile  ENHANCEMENTS.md  __init__.py  api.py  jobs.py  logs.py  manifest.py  models.py  pipeline.py  sample_scanner.py  service.py  settings.py  signing.py  storage.py  verification_models.py
certus_assurance/deploy/: docker-compose.yml  docker-compose.yml.bak
certus_assurance/tests/: conftest.py
certus_infrastructure/: docker-compose.sigstore.yml  docker-compose.yml
certus_infrastructure/localstack-init/: init-buckets.sh
certus_infrastructure/scripts/: init-sigstore-db.sql
certus_integrity/: __init__.py  evidence.py  middleware.py  middleware.py.backup  schemas.py  telemetry.py
certus_integrity/services/: __init__.py  presidio.py
certus_transform/: Dockerfile  ENHANCEMENTS.md  __init__.py  main.py
certus_transform/core/: __init__.py  config.py
certus_transform/deploy/: docker-compose.yml
certus_transform/routers/: __init__.py  health.py  ingest.py  privacy.py  promotion.py  uploads.py  verification.py
certus_transform/services/: __init__.py  privacy.py  s3_client.py  saas.py  trust.py
certus_transform/tests/: __init__.py  conftest.py
certus_trust/: Dockerfile  MOCK_FEATURES.md  PRODUCTION_IMPLEMENTATION.md  QUICK_START.md  README.md  TOGGLE_IMPLEMENTATION.md  __init__.py  config.py  main.py
certus_trust/api/: __init__.py  models.py  router.py  router_v2.py  verification_models.py
certus_trust/clients/: __init__.py  rekor_client.py  signing_client.py
certus_trust/deploy/: docker-compose.prod.yml  docker-compose.rollback.yml  (+1 more)
dagger_modules/: __init__.py
dagger_modules/security/: README.md  dagger.json  pyproject.toml
dagger_modules/security/assets/privacy-pack/raw/: customer-onboarding.md
dagger_modules/security/config/: semgrep-baseline.yml
dagger_modules/security/manifests/: README.md  presets.cue  schema.cue  tool_registry.cue
dagger_modules/security/manifests/cue.mod/: module.cue
dagger_modules/security/manifests/examples/: polyglot.cue  python-light.cue
dagger_modules/security/scripts/: promote_latest.py
dagger_modules/security/security-results/: latest
dagger_modules/security/security-results/20251210-172203-dcc309c/: attestation.intoto.json  detect-secrets.json  retire.json  sbom.cyclonedx.json  sbom.spdx.json  summary.json  trivy.sarif.json
dagger_modules/security/security_module/: __init__.py  __main__.py  api.py  artifacts.py  cli.py  constants.py  dast.py  main.py  manifest.py  policy.py  runtime.py  sast.py  scanner.py  stack.py  tooling.py
dagger_modules/security/security_module/scripts/: __init__.py  embed_manifest_metadata.py  enforce_policy.py  generate_attestation.py  generate_summary.py  privacy_scan.py  run_dast_placeholder.py  sign_artifacts.py
dagger_modules/security/tests/: __init__.py  test_assets.py  test_manifest.py  test_manifest_metadata.py  test_policy.py  test_scanner.py
deployment/: README.md
docker/: backend.Dockerfile  otel-collector-config.yaml  prometheus.yaml
docs/: .pages  index.md
samples/: bandit_dummy.json  example-sbom.spdx.json  example-security-scan.sarif  opengrep_dummy.json  trivy_dummy.json
scripts/: README-trillian-init.md  README.md  attestations-workflow.sh  bootstrap-datalake.sh  cleanup.sh  copy-privacy-pack.sh  datalake-upload-sample.sh  deploy-trust-production.sh  destroy.sh  dev.zellij.sh  docker-login.sh  generate-compliance-report.py  index_s3_corpus.py  init-localstack.sh  init-trillian.sh  load_security_into_neo4j.py  mkdocs-serve.sh  oci-attestations.py  pre-commit-security-check.sh  privacy_scan_s3.py  promote_product_acquisition.sh  promote_security_scans.sh  query_rekor.sh  query_verification_proof.py  reset-trust-demo.sh  setup-end-to-end-tutorial.sh  setup-security-search.sh  shutdown-all.sh  sign-security-artifacts.sh  start-up.sh  test_ingestion_logging.py  trust-smoke-test.sh  upload_corpus.py  upload_corpus_to_s3.py  vendor-review-helper.sh  vendor-review-service.py  verify_rate_limit.py
tests/: README.md  conftest.py  test_assurance_scan_status.py  test_config_validation.py  test_datalake.py  test_end_to_end_non_repudiation.py  test_ingestion_premium.py  test_ingestion_verification.py  test_logging_integration.py  test_non_repudiation_integration.py  test_non_repudiation_runnable.py  test_pipelines_preprocessing.py  test_routers_api.py  test_security_parsers_phase1.py  test_security_parsers_phase2.py  test_settings_fallbacks.py  test_transform_verification.py  tmp_cosign.sh
(+623 files in other folders)
