[project]
name = "certus-tap"
version = "0.0.1"
description = "Certus TAP (Transparency, Assurance, and Privacy) - A production-grade RAG system with privacy-first design, modular features, and comprehensive error handling"
authors = [{ name = "Martin Harrod", email = "martin.harrod@gmail.com" }]
readme = "README.md"
keywords = ['python', 'rag', 'document-processing', 'privacy']
requires-python = ">=3.10,<4.0"
dependencies = [
    # FastAPI/Web Framework
    "fastapi",
    "uvicorn",
    "python-multipart",
    # Core RAG/Search
    "haystack-ai",
    "sentence-transformers",
    "opensearch-haystack",
    "opensearch-py",
    "ollama-haystack>=0.1",
    # Knowledge Graph
    "neo4j>=5.0",
    # Data & Configuration
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv>=1.0.0",
    # Storage
    "boto3",
    # Numeric stack (presidio/spaCy wheels don't support numpy 2.x yet)
    "numpy>=1.26.4,<2",
    # Privacy & Security
    "presidio-analyzer",
    "presidio-anonymizer",
    # Logging & Monitoring
    "structlog>=24.1.0",
    "python-json-logger>=2.0.0",
    # HTTP & Networking
    "httpx",
    "requests",
    # Security scanning (JSONPath-based parsing for tool outputs)
    "jsonpath-ng>=1.5.3",
    # Sigstore integration for supply chain security
    "sigstore>=3.0.0",
    "cryptography>=41.0.0",
    # Document processing (markdown conversion)
    "markdown-it-py>=3.0",
    "mdit-plain>=1.0.1",
    # UI
    "streamlit>=1.40",
    "spdx-tools",
    "pyyaml",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    # Security scanning
    "dagger-io>=0.11.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Internet",
]

[project.urls]
Homepage = "https://mharrod.github.io/certus-TAP/"
Repository = "https://github.com/mharrod/certus-TAP"
Documentation = "https://mharrod.github.io/certus-TAP/"
Issues = "https://github.com/mharrod/certus-TAP/issues"

[project.scripts]
security-scan = "security_module.cli:main"

[project.optional-dependencies]
# Advanced document processing (Word, PowerPoint, CSV, etc.)
documents = [
    "pypdf>=3.17",
    "python-docx>=0.8",
    "python-pptx>=0.6",
    "markdown-it-py>=3.0",
    "mdit-plain>=1.0.1",
    "beautifulsoup4>=4.12",
    "readability-lxml>=0.8",
    "trafilatura>=1.6",
]

# LLM inference and local embeddings
llm = [
    "ollama-haystack>=0.1",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

# Evaluation and experiment tracking
eval = [
    "deepeval>=0.21",
    "mlflow>=2.0",
]

# Git operations (GitHub repository integration)
git = [
    "gitpython>=3.1",
]

# All optional features
all = [
    "certus-tap[documents,llm,eval,git]",
]

[dependency-groups]
backend = [
    "boto3",
    "deepeval",
    "fastapi",
    "haystack-ai",
    "ollama-haystack",
    "opensearch-haystack",
    "sentence-transformers",
    "gitpython",
    "beautifulsoup4",
    "readability-lxml",
    "markdown-it-py",
    "mdit-plain>=1.0.1",
    "python-docx",
    "pypdf",
    "python-pptx",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "httpx",
    "trafilatura",
    "mlflow",
    "opensearch-py",
    "presidio-analyzer",
    "presidio-anonymizer",
    "pydantic",
    "pydantic-settings",
    "python-dotenv>=1.0.0",
    "python-multipart",
    "requests",
    "uvicorn",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.0",
]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.23.0",
    "moto[s3]>=5.0.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-exclude>=1.0.2",
    "pandas-stubs>=2.0.0",
    "dagger-io>=0.11.0",
]
docslabs = [
    "marimo>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["certus_ask", "certus_transform", "certus_integrity", "dagger_modules/security/security_module"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "certus_tap.streamlit_app"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: end-to-end smoke tests that require the full Docker stack",
    "integration: integration tests that require multiple services running",
    "slow: tests that take longer than 30 seconds to complete",
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Complexity
    "C901",
    # Ambiguous characters (emojis)
    "RUF001",
    # Nested if
    "SIM102",
    # Import not at top
    "E402",
    # Partial executable path
    "S607",
    # Try/Except/Else
    "TRY300",
    # Raise from
    "B904",
    # Long messages outside exception class
    "TRY003",
    # Shadowing builtin
    "A002",
    # Abstract raise to inner function
    "TRY301",
    # Use logging.exception
    "TRY400",
    # Unused variable
    "F841",
    # Mutable class attributes
    "RUF012",
    # Subprocess untrusted input
    "S603",
    # Ambiguous variable name
    "E741",
    # Prefer TypeError
    "TRY004",
    # FastAPI Depends pattern
    "B008",
    # Generic type ignore
    "PGH003",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "S105", "S106", "S107", "S108", "S113", "TRY002", "TRY301", "F401", "SIM117", "S110", "S112"]
"dagger_modules/security/tests/*" = ["S101", "S108"]
"samples/*" = ["S101", "S105", "S106", "S107", "S311", "B007"]
"scripts/*" = ["S113", "S311", "E722", "S110", "S112"]
"tools/*" = ["S108", "S603", "S607", "RUF059", "PGH003"]
"dagger_modules/security/security_module/*" = ["S108"]
"certus_trust/config.py" = ["S104"]
"certus_ask/services/storage/opensearch_client.py" = ["B019"]
"certus_assurance/pipeline.py" = ["S501"]
"certus_integrity/evidence.py" = ["S108"]
"certus_ask/tests/*" = ["S110"]
"dagger_modules/security/security_module/scripts/*" = ["S112"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
